2007-02-08 CTAF <>
	* emacs : commited a fix for qt c++
	* emacs : huge speed up at startup time
	* emacs : new file: emacs.config that contains global configuration
	* emacs : cleanup, remove some files
	* emacs : never display menu-bar on windows

2007-02-06 CTAF <>
	* emacs : removed zone mode (you already miss me)
	* emacs : improved load time
	* ctafconf : no more ctafconf_config
	* ctafconf : no more ctafconf_sudo
	* colorsvn : yalla!
	* colorcvs : olle!!
	* emacs : bug with gdb-ui
	* emacs : cua everywhere

2007-02-05 CTAF <>
	* colormake : handle fucking libtool
	* chownr : chown recursif

2007-02-04 CTAF <>
	* shell : include colormake, binding for m,ma,etc.. use it :-)
	* ctafconf : ctafconf-install works !! (no more bug with ask, nor with choice)
	* ssft : bug with read
	* emacs : fixed a bug, emacs start faster

2006-17-06 CTAF <>
	* alias : svndiff (svn diff without whitespace, tab, and blankline differences)

2006-05-30 CTAF <>
	* emacs : remove some bug in prog.emacs, mode.emacs and misc.emacs

2006-05-29 CTAF <>
	* emacs : M-x => browse-kill-ring
	* emacs : use generic, generic-x for unix configuration file
	* emacs : support flymake in makefile template

2006-05-21 CTAF <> -- 0.3.1
	* xsession : remove wm changing, not complete enought
	* emacs : icicle => M-x, C-x f, ...
	* emacs : include gdb-ui for a better debugging experience
	* emacs : pc-keys: better home and end keybindings

2006-05-20 CTAF <>
	* xsession : support kdeinit
	* xsession : stability improvement
	* emacs : indicate buffer boundary on the left fringe
	* shell : disable annoying bell
	* shelltools.sh : null_cmd (redirect output to /dev/null)

2006-05-18 CTAF <>
	* generic-menu.el : allow for menu buffer
	* generic-dl.el : menu buffer, with all function name of the current buffer
	* emacs : new menu with all function and configuration

2006-05-16 CTAF <>
	* xsession : allow stopping the current wm normaly
	* xsession : shutdown gnome in a clean way