@@ -1,11 +1,11 @@
-#!/bin/sh
+#!/usr/bin/env bash
 ## xsession for xsession in /home/ctaf/.ctafconf/etc/xsession
 ##
 ## Made by GESTES Cedric
 ## Login   <ctaf@epita.fr>
 ##
 ## Started on  Mon Sep 26 02:37:56 2005 GESTES Cedric
-## Last update Tue Feb  6 07:59:19 2007 GESTES Cedric
+## Last update Fri Feb  9 00:06:37 2007 GESTES Cedric
 ##
 ##CTAFCONF
 
