@@ -4,6 +4,8 @@
 	* emacs : new file: emacs.config that contains global configuration
 	* emacs : cleanup, remove some files
 	* emacs : never display menu-bar on windows
+	* xsession : make it portable using /usr/bin/env bash
+	* color*.pl : use /usr/bin/env perl to be more portable
 
 2007-02-06 CTAF <>
 	* emacs : removed zone mode (you already miss me)
